--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,9 +42,12 @@ android {
     }
 
     defaultConfig {
+       /* configurations.all {
+            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        }*/
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "weather.com.example.weather"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -64,5 +67,18 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-ads:20.4.0'
+    implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version")
+           {
+        force = true
+    }
+
+    // For apps targeting Android 12, add WorkManager dependency.
+  /*  constraints {
+        implementation('androidx.work:work-runtime:2.7.0') {
+            because '''androidx.work:work-runtime:2.1.0 pulled from play-services-ads
+                   has a bug using PendingIntent without FLAG_IMMUTABLE or
+                   FLAG_MUTABLE and will fail in apps targeting S+.'''
+        }
+    }*/
 }
