--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.0.1
   intl: ^0.17.0
   flutter_typeahead: ^3.2.1
+  google_mobile_ads: ^0.13.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
